# Pijin

./: .gitignore  LICENSE  OmniFi_DevOps_Plan.docx  README.md  app.json  assets-minter.js  e2e.js  get-ids.js  llms.txt  package-lock.json  package.json  skills-lock.json  test-textbee.js
.github/workflows/: backend-ci.yml  ci.yml  contracts-ci.yml  discord-pr.yml  mobile-ci.yml
.husky/: pre-commit
apps/backend/: .env.example  OFFLINE_TRANSACTION_DEBUG.md  check_accounts.js  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
apps/backend/app/: globals.css  layout.tsx  page.tsx
apps/backend/app/api-docs/: page.tsx  swagger.css
apps/backend/app/components/: index.ts
apps/backend/app/deposit/: DepositForm.tsx  page.tsx
apps/backend/app/withdraw/: page.tsx
apps/backend/lib/: crypto.ts  offline-transaction-debug.ts  offline-voucher.ts  omnifi-contract.ts  omnifi-sdk.ts  pijin-contract.ts  prisma.ts  settlement.ts  short-id.ts  sms.ts  textbee.ts
apps/backend/prisma/: schema.prisma
apps/mobile/: App.tsx  app.json  eas.json  index.ts  metro.config.js  package-lock.json  package.json
apps/mobile/android/: settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/src/constants/: api.ts  network.ts  spacing.ts  stellar.ts  theme.ts  typography.ts
apps/mobile/src/context/: AuthContext.tsx
apps/mobile/src/db/: client.ts  migrations.ts  schema.ts
apps/mobile/src/hooks/: useAmountKeypad.ts  useJitTrustline.ts  useMockTransactions.ts  (+2 more)
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
(+175 files in other folders)
